[tool.poetry]
name = "DogCity"
version = "0.1.0"
description = "Веб приложение для оказания услуг присмотра за домашними животными"
authors = ["Илья Кибирев <ikibirev@yande.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = {extras = ["mypy"], version = "^2.0.28"}
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
pydantic = "^2.0.0"
pydantic-settings = "^2.2.1"
ruff = "^0.2.1"
mypy = "^1.8.0"
result = "^0.16.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
